Added mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta tags -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Karim Mamdouh" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Convert your text to markdown language and preview it before placing on GitHub"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <meta property="og:title" content="Markdown Previewer" />
+    <meta property="og:image" content="%PUBLIC_URL%/banner.jpg" />
+    <meta
+      property="og:description"
+      content="Convert your text to markdown language and preview it before placing on GitHub"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://karim-mamdouh.github.io/Markdown-Previewer/"
+    />
+    <!-- Link tags -->
+    <link rel="icon" href="%PUBLIC_URL%/html.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/html192.png" />
+    <title>Markdown Previewer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -25,6 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Testing tag -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
